# fin-tradeing-system

./: CMakeLists.txt  CtpTrader  I_got_it  README.md  TestMdCore  auto
backup/: CtpTrader.cpp.backup  MdSpi.cpp  TraderSpi.cpp  ctp.pb.cc  ctp.pb.h  ctp.proto  ctpmessage.proto  message.proto
config/: ctp_zhongxin.json  future_contract.txt  gateway.json  load_future_contract.py
datacore/: CMakeLists.txt  ln.sh
datacore/base/: Init.cpp  Logger.h
datacore/config/: SysConfig.cpp  SysConfig.h
datacore/datacore/: CMakeLists.txt  datacore.cpp  zmq_proto_send.cpp
datacore/include/protobuf/: ctp.pb.h
datacore/mdlink_center/: CMakeLists.txt  datacore.cpp  zmq_proto_receive.cpp
datacore/mdlink_ctp/: CMakeLists.txt  CtpMdServer.cpp  CtpMdServer.h  MdLinkMain.cpp  MdSpi.cpp  ctp_md.hpp
datacore/mdlink_merge/: MergeMdServer.cpp  MergeMdServer.h
datacore/msgbus/: Event.h  MsgQueue.h  Publisher.h
datacore/msgbus/impl/: PublisherImpl.cpp  PublisherImpl.h  SubscriberImpl.cpp
datacore/protobuf/: ctp.proto
datacore/public/: MapTables.h  MdServer.cpp  MdServer.h
doc/: guotaian.md  message_communication.md  pytdx_data.md  requirment.md  期权.md  期权行情测试模块.md  策略库模板
include/: FileUtils.cpp  FileUtils.h  ZmqServer.cpp  ZmqServer.h
include/protobuf/: aaa.h  bbb.h  ctp.proto  ctp_pb2.py  ctpmessage.proto  ctpmessage_pb2.py  func2.cpp  guosen.pb.cc  guosen.pb.h  guosen.proto  message.proto  out_char.cpp  out_msgtype.proto  out_req.cpp  out_rtn.cpp  read.py  rtn.cpp  use1.py
manage/: layout.html  manage.py
mdlink_center/: CMakeLists.txt  RealDataCore.cpp  RedisCore.cpp
mdlink_ctp/: CMakeLists.txt  CtpMd.cpp  MdSpi.cpp  MdSpi.h
message_commun_example/: backtest_module.py  client.py  connect_backtest.bat  connect_backtest.py  connect_historydata.bat  connect_historydata.py  connect_manage.bat  connect_manage.py  connect_realdata.bat  connect_realdata.py  connect_strategy.bat  connect_strategy.py  connect_trade.bat  connect_trade.py  historydata_module.py  manage_module.py  realdata_module.py  start_all_module.bat  strategy_module.py  trade_module.py
message_commun_example/本地原有历史数据模块/: client.py  rec.py  ser.py
message_commun_example/逐笔数据回测模块/: 20180716-20180717-SH-601318.csv
realdatacore/: CMakeLists.txt  CtpMd  MdCore
realdatacore/mdlink_ctp/: CtpMd.cpp
realdatacore/test/: CMakeLists.txt
test/: CMakeLists.txt  TestRealData.cpp  TestRealData.py
trader_ctp/: CMakeLists.txt  CtpTrader.cpp  TraderSpi.cpp  TraderSpi.h
(+1 files in other folders)
